Real Projects added

--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,21 @@
 ::-webkit-scrollbar {
     width: 10px;
-    display: none;
+    /* display: none; */
   }
   
   /* Track */
-  /* ::-webkit-scrollbar-track {
+  ::-webkit-scrollbar-track {
     box-shadow: inset 0 0 5px grey; 
     border-radius: 10px;
-  } */
+  }
    
   /* Handle */
-  /* ::-webkit-scrollbar-thumb {
-    background: rgb(0, 36, 122); 
+  ::-webkit-scrollbar-thumb {
+    background: rgb(18, 11, 70); 
     border-radius: 10px;
-  } */
+  }
   
   /* Handle on hover */
-  /* ::-webkit-scrollbar-thumb:hover {
+  ::-webkit-scrollbar-thumb:hover {
     background: #001e57; 
-  } */
+  }
