--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,16 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
+/* global class */
+.themeText {
+    color: #6c63ff;
 }
 
 
@@ -13,7 +23,7 @@
 .navbar {
     /* border: 1px solid red; */
     padding: 10px;
-    background-color: #04133a;
+    background-color: #111a2f;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -72,19 +82,6 @@
     color: #3f7cdd;
     animation: waterWave 4s ease-in-out infinite;
 }
-
-@keyframes waterWave {
-
-    0%,
-    100% {
-        clip-path: polygon(0% 45%, 15% 44%, 32% 50%, 54% 60%, 70% 61%, 84% 59%, 100% 52%, 100% 100%, 0% 100%);
-    }
-
-    50% {
-        clip-path: polygon(0% 60%, 16% 65%, 34% 66%, 51% 62%, 67% 50%, 84% 45%, 100% 46%, 100% 100%, 0% 100%);
-    }
-}
-
 
 
 /* navbar options */
@@ -199,43 +196,281 @@
 #home {
     position: relative;
     height: 95vh;
-    width: 100vw;
+    width: 100%;
     background: url('https://jameswaweru.vercel.app/static/media/background.78f65f0d57d328c7311a.png');
-    z-index: 1;
-
-    /* background: -webkit-linear-gradient(to right, #49a09d, #5f2c82); */
-    /* Chrome 10-25, Safari 5.1-6 */
-    /* background: linear-gradient(to right, #306187, #5f2c82); */
-    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
     color: white;
 }
 
+#home * {
+    transition: all 400ms ease-in-out;
+}
+
 #home::after {
-    z-index: 2;
     content: "";
     width: 100%;
     height: 100%;
     position: absolute;
     top: 0;
     left: 0;
-    background: linear-gradient(#1a202c78, rgba(0, 0, 0, 0.818));
+    background: linear-gradient(#1a202cb4, rgba(0, 0, 0, 0.868));
 }
 
-#home>div:first-child{
-
+#home>div:first-child>div {
+    z-index: 1;
+    color: #b4b4b4
 }
+
+#home>div:first-child>div:nth-child(1) {
+    width: 40vw;
+}
+
+
+/* text-glitch animation */
+.content {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.content .text {
+    white-space: nowrap;
+    color: #fff;
+    font-weight: 700;
+    text-transform: uppercase;
+    transform: scale(1.15);
+    letter-spacing: 2px;
+    padding: 30px;
+    pointer-events: none;
+}
+
+.content .text::before,
+.content .text::after {
+    position: absolute;
+    content: attr(data-text);
+    padding: 30px;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    background: transparent;
+    color: #fff;
+    overflow: hidden;
+    pointer-events: none;
+}
+
+.content .text::before {
+    left: -3px;
+    text-shadow: -2px 0 red;
+    animation: glitch-1 2s 0s linear reverse infinite;
+}
+
+.content .text::after {
+    left: 3px;
+    text-shadow: -2px 0 blue;
+    animation: glitch-2 2s 0s linear reverse infinite;
+}
+
+/* Description text */
+.content+p {
+    font-size: 19px;
+    letter-spacing: 2px;
+}
+
+
+/* Hire me button */
+.hireMe>a {
+    margin: 30px 0px;
+}
+
+.hireMe>a>button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border-radius: 22px;
+    font-size: 20px;
+    border: 2px solid #6c63ff;
+    color: #6c63ff;
+    background-color: transparent;
+    transition: 400ms;
+}
+
+.hireMe>a>button:hover {
+    border: 1px solid transparent;
+    background-color: #6c63ff;
+    color: #fff;
+}
+
+
+
+#home>div:first-child>div:nth-child(2) {
+    width: 38vw;
+}
+
+
+
+/* About me */
+#aboutMe {
+    height: 100vh;
+    background-color: #1a202c;
+    padding: 0px 20px;
+}
+
+#aboutMe * {
+    transition: all 400ms ease-in-out;
+}
+
+/* About me heading */
+#aboutMe>h2:nth-child(1) {
+    text-align: center;
+    margin: 50px 0px -50px;
+}
+
+/* svg */
+#aboutMe>div:nth-child(2)>div:nth-child(1) {
+    width: 50%;
+}
+
+#aboutMe>div:nth-child(2)>div:nth-child(2) {
+    height: 100%;
+    width: 40%;
+    margin-inline: auto;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 50px;
+}
+
+
+
+/* my image and desc part */
+#aboutMe>div:nth-child(2)>div:nth-child(2)>div:nth-child(1)>svg {
+    display: none;
+}
+
+#aboutMe>div:nth-child(2)>div:nth-child(2)>div:nth-child(2)>p {
+    text-align: justify;
+    letter-spacing: 1.5px;
+}
+
+
+
+
+/* Technical Skills */
+#skills {
+    margin-bottom: 50px;
+}
+
+#skills * {
+    transition: all 200ms ease-in-out;
+}
+
+#skills>h2:nth-child(1) {
+    text-align: center;
+    margin: 50px 0px;
+}
+
+/* Main skill box */
+#skills>div:nth-child(2) {
+    /* border: 2px solid yellow; */
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+
+/* Skill parts */
+#skills>div:nth-child(2)>div {
+    /* border: 2px solid blueviolet; */
+    display: flex;
+}
+
+/* image part */
+#skills>div:nth-child(2)>div:nth-child(1) {
+    min-width: 90%;
+}
+
+.skills {
+    flex-direction: column;
+    width: 90%;
+    gap: 20px;
+    margin: 80px auto;
+}
+
+
+.skills>div {
+    flex-direction: column;
+}
+
+
+.skills>div>h2 {
+    text-align: center;
+    margin: 20px 0px;
+}
+
+.skills>div>div:nth-child(2) {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px 30px;
+}
+
+.skill {
+    width: 90px;
+    box-shadow: rgba(190, 215, 244, 0.4) 0px 0px 0px 2px, rgba(208, 227, 248, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.418) 0px 1px 0px inset;
+    border-radius: 8px;
+    padding: 8px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    cursor: pointer;
+}
+
+.skill:hover {
+    transform: translateY(-10px);
+}
+
+.skill>div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 5px 0px;
+    border-radius: 8px 8px 0px 0px;
+    background-color: #ffffff1e;
+}
+
+.skill>div>img {
+    width: 65%;
+}
+
+.skill>p {
+    font-size: 17px;
+    white-space: nowrap;
+}
+
+
+
+
+
+
+
+
+
 
 
 /* Projects section */
-.projects {
-    width: fit-content;
-    margin: 50px auto;
-    gap: 60px 100px;
-    justify-content: center;
-    align-items: center;
+#projects {
+    margin-top: 50px;
+    background-color: #1a202c;
 }
 
+#projects>div:nth-child(2) {
+    width: 80vw;
+    margin: 50px auto;
+}
 
 /* Porject - card */
 .ProjectCard {
@@ -263,12 +498,23 @@
     justify-content: center;
 }
 
-.ProjectCard>div:last-child>div>button>svg {
+.ProjectCard>div:last-child>div>a>button>svg {
     margin-left: 10px;
 }
 
 
+/* Github stats */
+#githubStats {
+    background-color: #1a202c;
+}
 
+#githubStats * {
+    transition: all 400ms ease-in-out;
+}
+
+#githubStats>h2 {
+    margin: 20px 0px;
+}
 
 /* Github-stats images */
 .github-stats {
@@ -276,9 +522,6 @@
     gap: 20px;
 }
 
-
-
-/* Github stats */
 .react-activity-calendar {
     background-color: #1a202c;
     color: #fff;
@@ -289,31 +532,39 @@
 
 
 /* Contact-me */
-.contact-me {
+#contactMe {
     margin: 50px 0px;
     padding: 30px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
+    background-color: #1a202c;
 }
 
-.contact-me>div:nth-child(2) {
-    gap: 150px;
+#contactMe * {
+    transition: all 400ms ease-in-out;
+}
+
+#contactMe>h2 {
+    margin: 20px auto;
+}
+
+#contactMe>div:nth-child(2) {
+    gap: 20%;
 }
 
 /* svg box */
-.contact-me>div:nth-child(2)>div:nth-child(1) {
+#contactMe>div:nth-child(2)>div:nth-child(1) {
     display: flex;
     justify-content: center;
     align-items: center;
-    width:600px;
+    width: 750px;
 }
 
 /* ! form section */
 .form-section {
-    width: 400px;
+    width: 450px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -323,6 +574,15 @@
     padding: 30px 20px;
     border-radius: 8px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
+}
+
+.form-section>form {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
 }
 
 .inputBox {
@@ -369,8 +629,12 @@
     border: 1px solid #49a09d;
 }
 
-.form-section>div:nth-child(4)>textarea {
-    min-width: 360px;
+.form-section>form>div:nth-child(3) {
+    width: 100%;
+}
+
+.form-section>form>div:nth-child(3)>textarea {
+    width: 100%;
     min-height: 100px;
     background-color: #141431;
     border: 1px solid rgba(255, 255, 255, 0.25);
@@ -379,7 +643,22 @@
     border-radius: 5px;
 }
 
+.form-section>form>input:nth-child(4) {
+    width: 100%;
+    background-color: transparent;
+    border: 1px solid rgba(255, 255, 255, 0.25);
+    ;
+    padding: 5px 0px;
+    margin-top: -20px;
+    border-radius: 20px;
+    cursor: pointer;
+}
 
+.form-section>form>input:nth-child(4):hover {
+    background-color: #212151;
+    color: #e0eff2;
+    text-shadow: -2px 1px 0 #3a50d9, -4px 3px 0 #0a0e27;
+}
 
 .social-icons {
     height: 40px;
@@ -409,22 +688,50 @@
 
 
 
-@keyframes clockwiseSpin {
-    100% {
-        transform: rotate(360deg);
+
+
+/*? ==========Breakpoints========== */
+
+/* 1024px width laptop */
+@media all and (max-width:1024px) {
+
+    /* text-glitch */
+    .content .text {
+        font-size: 35px;
+    }
+
+    /* about-me >
+     svg */
+
+    #aboutMe>div:nth-child(2)>div:nth-child(1) {
+        display: none;
+    }
+
+    #aboutMe>div:nth-child(2)>div:nth-child(2) {
+        width: 90%;
+    }
+
+    #aboutMe>div:nth-child(2)>div:nth-child(2)>div:nth-child(1)>svg {
+        display: block;
+    }
+
+
+    /* contect me */
+    #contactMe>div:nth-child(2)>div:nth-child(1) {
+        width: 600px;
+    }
+
+    .form-section {
+        width: 350px;
+    }
+
+    #contactMe>div:nth-child(2) {
+        gap: 5%;
     }
 }
 
-@keyframes antiClockWiseSpin {
-    100% {
-        transform: rotate(-360deg);
-    }
-}
 
-
-
-
-
+/* Tablet part */
 @media all and (max-width:768px) {
 
     /* Navbar */
@@ -444,12 +751,50 @@
         font-size: 20px;
     }
 
+    .content .text {
+        font-size: 25px;
+    }
+
+
+    /* about me */
+    #aboutMe>div:nth-child(2)>div:nth-child(1) {
+        display: none;
+    }
+
+    #aboutMe>div:nth-child(2)>div:nth-child(2) {
+        width: 90%;
+    }
+
+    /* Profile pic */
+    #aboutMe>div:nth-child(2)>div:nth-child(2)>div:nth-child(1)>img {
+        height: 200px;
+        width: 200px;
+    }
+
+
+    /* projects */
+    #projects>div:nth-child(2) {
+        gap: 15px;
+    }
+
+
     /* github-stats */
     .github-stats {
         flex-direction: column;
     }
+
+    .react-activity-calendar {
+        width: 90%;
+    }
+
+
+    #contactMe>div:nth-child(2)>div:nth-child(1) {
+        width: 90%;
+    }
+
 }
 
+/* Mobile part */
 @media all and (max-width: 320px) {
 
     #home>div:nth-child(1)>div:nth-child(1)>h2 {
@@ -462,8 +807,50 @@
     }
 
     #home>div:nth-child(1)>div:nth-child(2)>img {
-        height: 200px;
-        width: 200px;
+        height: 220px;
+        width: 220px;
+    }
+
+
+
+    #home>div:first-child>div:nth-child(1) {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100vw;
+    }
+
+    #home>div:first-child>div:nth-child(2) {
+        width: 90vw;
+    }
+
+    .content .text {
+        font-size: 22px;
+    }
+
+
+    /* about me */
+    #aboutMe>h2:nth-child(1) {
+        margin: 50px 0px 10px;
+    }
+
+    #aboutMe>div:nth-child(2)>div:nth-child(2)>div:nth-child(1)>svg {
+        display: none;
+    }
+
+    #aboutMe>div:nth-child(2)>div:nth-child(2)>div:nth-child(2)>p {
+        text-align: justify;
+        letter-spacing: 1px;
+    }
+
+    /* Skill */
+    .skill {
+        width: 60px;
+    }
+
+    .skill p {
+        font-size: 12px;
+        white-space: nowrap;
     }
 
     .ProjectCard {
@@ -472,6 +859,10 @@
     }
 
     /* github-stats */
+    #githubStats>div:nth-child(2)>img {
+        width: 75%;
+    }
+
     .github-stats {
         flex-direction: column;
     }
@@ -487,24 +878,222 @@
     }
 
 
-    .contact-me>div:nth-child(2) {
+    #contactMe>div:nth-child(2) {
         gap: 50px;
     }
 
-    .contact-me>div:nth-child(2) {
+    #contactMe>div:nth-child(2) {
         width: 100%;
     }
 
-    .contact-me>div:nth-child(2)>div:nth-child(1) {
+    #contactMe>div:nth-child(2)>div:nth-child(1) {
         width: 85%;
     }
 
     .form-section {
-        width: 90%;
+        width: 100%;
     }
 
-    .form-section>div:nth-child(4)>textarea {
-        min-width: 100%;
+}
+
+
+
+
+
+/*? =========== Animations =========== */
+@keyframes waterWave {
+
+    0%,
+    100% {
+        clip-path: polygon(0% 45%, 15% 44%, 32% 50%, 54% 60%, 70% 61%, 84% 59%, 100% 52%, 100% 100%, 0% 100%);
     }
 
+    50% {
+        clip-path: polygon(0% 60%, 16% 65%, 34% 66%, 51% 62%, 67% 50%, 84% 45%, 100% 46%, 100% 100%, 0% 100%);
+    }
+}
+
+
+@keyframes glitch-1 {
+    0% {
+        clip: rect(132px, auto, 101px, 30px);
+    }
+
+    5% {
+        clip: rect(17px, auto, 94px, 30px);
+    }
+
+    10% {
+        clip: rect(40px, auto, 66px, 30px);
+    }
+
+    15% {
+        clip: rect(87px, auto, 82px, 30px);
+    }
+
+    20% {
+        clip: rect(137px, auto, 61px, 30px);
+    }
+
+    25% {
+        clip: rect(34px, auto, 14px, 30px);
+    }
+
+    30% {
+        clip: rect(133px, auto, 74px, 30px);
+    }
+
+    35% {
+        clip: rect(76px, auto, 107px, 30px);
+    }
+
+    40% {
+        clip: rect(59px, auto, 130px, 30px);
+    }
+
+    45% {
+        clip: rect(29px, auto, 84px, 30px);
+    }
+
+    50% {
+        clip: rect(22px, auto, 67px, 30px);
+    }
+
+    55% {
+        clip: rect(67px, auto, 62px, 30px);
+    }
+
+    60% {
+        clip: rect(10px, auto, 105px, 30px);
+    }
+
+    65% {
+        clip: rect(78px, auto, 115px, 30px);
+    }
+
+    70% {
+        clip: rect(105px, auto, 13px, 30px);
+    }
+
+    75% {
+        clip: rect(15px, auto, 75px, 30px);
+    }
+
+    80% {
+        clip: rect(66px, auto, 39px, 30px);
+    }
+
+    85% {
+        clip: rect(133px, auto, 73px, 30px);
+    }
+
+    90% {
+        clip: rect(36px, auto, 128px, 30px);
+    }
+
+    95% {
+        clip: rect(68px, auto, 103px, 30px);
+    }
+
+    100% {
+        clip: rect(14px, auto, 100px, 30px);
+    }
+}
+
+@keyframes glitch-2 {
+    0% {
+        clip: rect(129px, auto, 36px, 30px);
+    }
+
+    5% {
+        clip: rect(36px, auto, 4px, 30px);
+    }
+
+    10% {
+        clip: rect(85px, auto, 66px, 30px);
+    }
+
+    15% {
+        clip: rect(91px, auto, 91px, 30px);
+    }
+
+    20% {
+        clip: rect(148px, auto, 138px, 30px);
+    }
+
+    25% {
+        clip: rect(38px, auto, 122px, 30px);
+    }
+
+    30% {
+        clip: rect(69px, auto, 54px, 30px);
+    }
+
+    35% {
+        clip: rect(98px, auto, 71px, 30px);
+    }
+
+    40% {
+        clip: rect(146px, auto, 34px, 30px);
+    }
+
+    45% {
+        clip: rect(134px, auto, 43px, 30px);
+    }
+
+    50% {
+        clip: rect(102px, auto, 80px, 30px);
+    }
+
+    55% {
+        clip: rect(119px, auto, 44px, 30px);
+    }
+
+    60% {
+        clip: rect(106px, auto, 99px, 30px);
+    }
+
+    65% {
+        clip: rect(141px, auto, 74px, 30px);
+    }
+
+    70% {
+        clip: rect(20px, auto, 78px, 30px);
+    }
+
+    75% {
+        clip: rect(133px, auto, 79px, 30px);
+    }
+
+    80% {
+        clip: rect(78px, auto, 52px, 30px);
+    }
+
+    85% {
+        clip: rect(35px, auto, 39px, 30px);
+    }
+
+    90% {
+        clip: rect(67px, auto, 70px, 30px);
+    }
+
+    95% {
+        clip: rect(71px, auto, 103px, 30px);
+    }
+
+    100% {
+        clip: rect(83px, auto, 40px, 30px);
+    }
+}
+
+@keyframes clockwiseSpin {
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes antiClockWiseSpin {
+    100% {
+        transform: rotate(-360deg);
+    }
 }
