--- a/src/App.css
+++ b/src/App.css
@@ -628,6 +628,14 @@ p::selection {
     gap: 20px;
 }
 
+.github-stats:nth-of-type(1)>img:first-child{
+    width: 23%;
+}
+
+.github-stats:nth-of-type(1)>img:last-child{
+    width: 44%;
+}
+
 .react-activity-calendar {
     background-color: #1a202c;
     color: #fff;
@@ -890,6 +898,11 @@ p::selection {
         font-size: 25px;
     }
 
+    /* github stats */
+    .github-stats img{
+        width: 95% !important;
+    }
+
 
     /* about me */
     #aboutMe>div:nth-child(2)>div:nth-child(1) {
@@ -1024,10 +1037,15 @@ p::selection {
         width: 75%;
     }
 
+
     .github-stats {
+        margin: 20px;
         flex-direction: column;
     }
 
+    .github-stats img{
+        width: 85%;
+    }
 
     .react-activity-calendar {
         width: 85%;
