--- a/src/index.css
+++ b/src/index.css
@@ -6,13 +6,11 @@
 /* Track */
 ::-webkit-scrollbar-track {
   box-shadow: inset 0 0 5px rgb(0, 36, 240);
-  border-radius: 10px;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: rgb(18, 11, 70);
-  border-radius: 10px;
+  background: #150e4ea8;
 }
 
 /* Handle on hover */
