--- a/src/App.css
+++ b/src/App.css
@@ -237,7 +237,7 @@ p::selection {
     position: relative;
     height: 95vh;
     width: 100%;
-    background: url('/public/background.webp');
+    background: url('/background.webp');
     color: white;
 }
 
@@ -693,8 +693,6 @@ p::selection {
         right: inherit;
     }
 }
-
-*/
 
 /* Projects section */
 #projects {
